tests/paczka1/fuzzy1/97248678.err
Error in line 3: nkJIe S685 53,5
Error in line 10: MCY A588 29,5
Error in line 13: S429 A243 78,9
Error in line 22: nkJIe S429 2,3
Error in line 29: I75 S429 13,9
